--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -36,26 +36,29 @@ spring:
 
 #redis
   redis:
+    ################ Redis 基础配置 ##############
     # Redis数据库索引（默认为0）
     database: 0
     # Redis服务器连接端口
     port: 6379
     # Redis服务器地址
-    host: localhost
+    host: 127.0.0.1
     # Redis服务器连接密码（默认为空）
     password:
-    jedis:
-      pool:
-        #连接池最大连接数（使用负值表示没有限制）
-        max-active: 8
-        # 连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-wait: -1
-        # 连接池中的最大空闲连接
-        max-idle: 8
-        # 连接池中的最小空闲连接
-        min-idle: 0
     # 连接超时时间（毫秒）
     timeout: 300
+    ################ Redis 线程池设置 ##############
+    lettuce:
+      pool:
+        # 连接池最大连接数（使用负值表示没有限制） 默认 8
+        max-active: 8
+        # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+        max-wait: -1
+        # 连接池中的最大空闲连接 默认 8
+        max-idle: 8
+        # 连接池中的最小空闲连接 默认 0
+        min-idle: 0
+
 
 
 
